<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".controllers.ControleDieta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MediaActivity">

            // IMAGEM
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/dieta"
                android:id="@+id/imageView" />

            // PESO
            <EditText
                android:id="@+id/dadosPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:hint="@string/pesoAtual"
                android:inputType="numberDecimal" />

            // ALTURA
            <EditText
                android:id="@+id/dadosAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:hint="@string/altura"
                android:inputType="numberDecimal" />

            // SEXO
            <Spinner
                android:id="@+id/dadosSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text"/>

            // DATA NASCIMENTO
            <EditText
                android:id="@+id/dadosDataNasciemnto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:hint="@string/dataNascimetno"
                android:inputType="text" />

            // OBJETIVO
            <Spinner
                android:id="@+id/dadosObjetivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/objetivo"
                android:inputType="text"/>

            // ATIVIDADE
            <Spinner
                android:id="@+id/dadosAtividade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/objetivo"
                android:inputType="text"/>

            // ENVIAR
            <Button
                android:id="@+id/dadosSalvar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/salvar"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
